5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1712_2507.log
== TEST (2019-05-14 21:57:47) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))/100
qr = int(input("pirarucus retirados mensalmente: "))
mes = 0 
pcm = pcm / 100
while (qi > 0 and qi < 8000):
	qr = int(input())/100
	qi = qi + ((qi * pcm) - qr)
	mes = mes + 1
if (qi == 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qr = int(input())/100
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:59:22) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))/100
qr = int(input("pirarucus retirados mensalmente: "))
mes = 0 
pcm = pcm / 100
while (qi > 0 and qi < 8000):
	qr = int(input("pirarucus retirados mensalmente:"))/100
	qi = qi + ((qi * pcm) - qr)
	mes = mes + 1
if (qi == 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qr = int(input())/100
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:00:03) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))/100
qr = int(input("pirarucus retirados mensalmente: "))
mes = 0 
pcm = pcm / 100
while (qi > 0 and qi < 8000):
	qr = int(input("pirarucus retirados mensalmente:"))/100
	qi = qi + ((qi * pcm) - qr)
	mes = mes + 1
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qr = int(input())/100
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:00:58) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))
qr = int(input("pirarucus retirados mensalmente: "))
mes = 0 
pcm = pcm / 100
while (qi > 0 and qi < 8000):
	qr = int(input("pirarucus retirados mensalmente:"))
	qi = qi + ((qi * pcm) - qr)
	mes = mes + 1
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:02:16) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))
qr = int(input("pirarucus retirados mensalmente: "))
mes = 0 
pcm = pcm / 100
while (qi > 0 and qi < 8000):
	qr = int(input("pirarucus retirados mensalmente:"))
	qi = qi + ((qi * pcm) - qr
	mes = mes + 1
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
File "XXXX", line 9
    mes = mes + 1
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:02:28) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))
qr = int(input("pirarucus retirados mensalmente: "))
mes = 0 
pcm = pcm / 100
while (qi > 0 and qi < 8000):
	qr = int(input("pirarucus retirados mensalmente:"))
	qi = qi + (qi * pcm) - qr
	mes = mes + 1
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:03:52) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))
qr = int(input("pirarucus retirados mensalmente: "))
mes = 0 

while (qi > 0 and qi < 8000):
	qr = int(input("pirarucus retirados mensalmente:"))
	qi = qi + ((qi * pcm)/100) - qr
	mes = mes + 1
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:04:45) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))
qr = int(input("pirarucus retirados mensalmente: "))
mes = 0 

while (qi > 0 and qi < 8000):	
	qi = qi + ((qi * pcm)/100) - qr
	mes = mes + 1
	qr = int(input("pirarucus retirados mensalmente:"))
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:06:13) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))

mes = 0 

while (qi > 0 and qi < 8000):	
	qi = qi + ((qi * pcm)/100) - qr
	mes = mes + 1
	qr = int(input("pirarucus retirados mensalmente:"))
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qi = qi + ((qi * pcm)/100) - qr
NameError: name 'qr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:06:50) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))

mes = 0 

while (qi > 0 and qi < 8000):	
	qr = int(input("pirarucus retirados mensalmente:"))
	qi = qi + ((qi * pcm)/100) - qr
	mes = mes + 1
	
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:07:22) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))

mes = 0 

while (qi > 0 and qi < 8000):	
	qr = int(input("pirarucus retirados mensalmente:"))
	qi = qi + ((qi * pcm)/100) - qr
	mes = mes + 1
	
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:07:27) 
-- CODE:
qi = int(input("pirarucus no tanque: "))
pcm = float(input("percentual de crescimento mensal: "))

mes = 0 

while (qi > 0 and qi < 8000):	
	qr = int(input("pirarucus retirados mensalmente:"))
	qi = qi + ((qi * pcm)/100) - qr
	mes = mes + 1
	
if (qi <= 0):
	print("ZERO")
elif (qi >= 8000):
	print("MAXIMO")
	
print(mes)
-- EXECUTION TIME:
0.152412
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
